# orr-overpotential-calculator

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: README.md  run_python_cpu.sh  run_test.py  vasp.yaml
example/cer/: README.md
example/cer/code/: oxide_oer_cer_.py
example/cer/result/: oer_cer_summary.csv
example/cluster/: README.md  make_cluster.py  plot_energy_diagram.py  run_cluster.py
example/cluster/Pt_cluster/: ORR_summary.txt  all_results.json
example/cluster/result/: orr_results_nanoparticles.csv
example/modified_surface/: README.md
example/modified_surface/code/: orr_Pt111.py  orr_Pt111_modified_surface.py  search_adsorption_site.py  search_adsorption_site_2.py  vasp.yaml
example/nanoparticle/: README.md
example/nanoparticle/Pt_nanoparticle_mattersim/: ORR_summary.txt  all_results.json
example/nanoparticle/code/: plot_energy_diagram.py  run_Pt_nanoparticle.py
example/nanoparticle/result/: orr_results_nanoparticles.csv
example/oer/cluster/: README.md  make_cluster.py  plot_energy_diagram.py  results_summary.md  run_cluster.py
example/oer/modified_surface/: README.md
example/oer/surface/: README.md  make_volcano_plot.py  run_metals.py  vasp.yaml
example/oer/vasp/: README.md
example/orr/cluster/: README.md  make_cluster.py  plot_energy_diagram.py  results_summary.md  run_cluster.py  (+1 more)
example/surface/: README.md  make_volcano_plot.py  run_metals.py  run_python_cpu.sh  run_test.py  solvent_correction.yaml  vasp.yaml
scripts/: run_pt55_by_site.py  run_python_cpu.sh  run_test.py
src/cer_overpotential_calculator/: tool.py
src/nanoparticle/: __init__.py
src/oer_overpotential_calculator/: __init__.py  calc_oer_energy.py  calc_oer_overpotential.py  get_overpotential_oer.py  tool.py
src/orr_overpotential_calculator/: __init__.py  calc_orr_energy.py  calc_orr_energy_torchsim.py  calc_orr_overpotential.py  tool.py
src/surface/: __init__.py
tests/: test_calc_backend_selectors.py  test_orr_bulk_relax_modes.py  test_public_api_layout.py
(+506 files in other folders)
