[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orr-overpotential-calculator"
version = "0.1.0"
description = "Calculator for ORR overpotential"
requires-python = ">=3.9"
dependencies = [
    "acat",
    "matplotlib",
    "pandas",
    "scipy",
    "asap3",
    "torch-dftd",
    "ase",
    "pyqt5",
    "pyyaml",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
