[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orr-overpotential-calculator"
version = "0.1.0"
description = "Calculator for ORR overpotential"
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "pandas",
    "torch-dftd",
    "ase",
    "pyqt5",
    "pyyaml",
    "fairchem-core>=2.16.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
